<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">welcome</string>
    <string name="app_name">WALLT</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="logo">Logo</string>
    <string name="id">ID</string>
    <string name="userName">User Name</string>
    <string name="email">Email</string>
    <string name="createAccount">Create Account</string>
    <string name="fullName">Full Name</string>
    <string name="pwd">Password</string>
    <string name="backToMain">Back</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="successful_login">You have logged in successfully!</string>
    <string name="login_fail">Incorrect username/password</string>
    <string name="registration_failed">Unable to register</string>
    <string name="title_activity_main_hub">MainHub</string>
    <string name="title_activity_login_fail">LoginFail</string>
    <string name="title_activity_registration_feed">RegistrationFeed</string>
    <string name="title_activity_registration_fail">RegistrationFail</string>

</resources>
