<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="90dip"
            android:contentDescription="@string/logo"
            android:src="@drawable/wallt" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/userNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/emailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="10dip"
            android:inputType="text"
            android:singleLine="true" />
        <!-- Password Label -->

        <TextView
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwd"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <!-- Login button -->

    <Button
        android:id="@+id/create"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg"
        android:gravity="center"
        android:text="@string/createAccount"
        android:textSize="20sp" />

    <Button
        android:id="@+id/backToMain"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create"
        android:layout_below="@+id/create"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg"
        android:gravity="center"
        android:text="@string/backToMain"
        android:textSize="20sp" />

</RelativeLayout>