<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <ImageView
            android:contentDescription="@string/logo"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="90dip"
            android:src="@drawable/wallt" />

        <TextView
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="10dip"
            android:inputType="text"
            android:singleLine="true" />
        <!-- Password Label -->

        <TextView
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwd"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

          <!-- Login button -->

          <Button
              android:id="@+id/btnLogin"
              android:layout_width="120dp"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:gravity="center"
              android:background="@drawable/bg"
              android:text="@string/Login"
              android:textSize="20sp" />

          <Button android:id="@+id/backToMain"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
              	android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/backToMain"
                android:gravity="center"
          	    android:background="@drawable/bg"
                android:layout_below="@id/btnLogin"
                android:textSize="20sp"/>
 

</RelativeLayout>