<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:fillViewport="true">

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/background" >

      <Button
          android:id="@+id/link_login"
          android:background="@drawable/bg"
          android:layout_width="120dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/imageView1"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="80dp"
          android:text="@string/Login"
          android:textSize="20sp" />
      <Button
          android:id="@+id/link_Register"
          android:background="@drawable/bg"
          android:layout_width="120dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/imageView1"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="150dp"
          android:text="@string/Register"
          android:textSize="20sp" />

      <ImageView
          android:id="@+id/imageView1"
          android:contentDescription="@string/logo"
          android:layout_width="200dip"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="80dp"
          android:src="@drawable/wallt" />
  </RelativeLayout>
</ScrollView>